set up foundation

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -5,3 +5,7 @@
   %h1 Hello Viktoria
   %p.doc
     = link_to 'Read Documentation Online', 'https://middlemanapp.com', target: '_blank'
+.projects
+  - data.projects.each do |project|
+    %h4= project[:name]
+    %p= project[:description]
