created a new branch for the topbar, and implemented it

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,7 +1,7 @@
 
 .welcome
   .logo
-    = image_tag 'middleman-logo.svg'
+    = image_tag 'jag.jpg'
   %h1 Hello Viktoria
   %p.doc
     = link_to 'Read Documentation Online', 'https://middlemanapp.com', target: '_blank'
