--- a/source/layouts/layout.html.haml
+++ b/source/layouts/layout.html.haml
@@ -6,7 +6,7 @@
     %meta{:charset => "utf-8"}/
     %meta{:content => "width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no", :name => "viewport"}/
     / Use title if it's in the page YAML frontmatter
-    %title= current_page.data.title || "Middleman"
+    %title= current_page.data.title || "Viktoria Blok"
     %link{:href => "//fonts.googleapis.com/css?family=Lato:300,400", :rel => "stylesheet", :type => "text/css"}/
     = stylesheet_link_tag :foundation
     = stylesheet_link_tag :site
@@ -15,5 +15,6 @@
     = javascript_include_tag :all
 
   %body{:class => page_classes}
+    = partial 'partials/header'
     = yield
     = partial 'partials/footer'
