--- a/source/stylesheets/foundation.css
+++ b/source/stylesheets/foundation.css
@@ -127,7 +127,7 @@ h1 {
    */
 mark {
   background: #ff0;
-  color: #000; }
+  color: silver; }
 
 /**
    * Address inconsistent and variable font size in all browsers.
@@ -379,8 +379,8 @@ body {
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-weight: normal;
   line-height: 1.5;
-  color: #0a0a0a;
-  background: #fefefe;
+  color: white;
+  background: silver;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
