Added links to the topbar

--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -11,11 +11,11 @@
         %a{:href => "#"} Portfolio
         %ul.submenu.menu.vertical{"data-submenu" => ""}
           %li
-            %a{:href => "#"} Portfolio
+            %a{:href => "https://blokkinen.github.io/bmi_challenge/"} BMI Challenge
           %li
-            %a{:href => "#"} My first Website
+            %a{:href => "https://github.com/Blokkinen/atm_challenge"} Atm challenge
           %li
-            %a{:href => "#"} FizzBuzz
+            %a{:href => "https://github.com/Blokkinen/fizz_buzz_challange"} FizzBuzz
       %li
         %a{:href => "#"} About me
       %li
