added links and pages to projects, about me and home

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,7 +1,7 @@
 
 .welcome
-  .logo
-    = image_tag 'jag.jpg'
+  .bakgrundsbild
+    = image_tag 'dator.jpg'
   %h1 Hello Viktoria
   %p.doc
     = link_to 'Read Documentation Online', 'https://middlemanapp.com', target: '_blank'
@@ -9,3 +9,4 @@
   - data.projects.each do |project|
     %h4= project[:name]
     %p= project[:description]
+    = link_to 'github', project[:url]
