--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -4,19 +4,15 @@
 #main-menu.top-bar
   .top-bar-left
     %ul.dropdown.menu{"data-dropdown-menu" => ""}
-      %li.menu-text Viktoria Blok
+      %li.menu-text
+        = link_to 'Viktoria Blok', 'index.html'
   .top-bar-right
     %ul.menu{"data-responsive-menu" => "drilldown medium-dropdown"}
-      %li.has-submenu
-        %a{:href => "#"} Portfolio
-        %ul.submenu.menu.vertical{"data-submenu" => ""}
-          %li
-            %a{:href => "#"} Portfolio
-          %li
-            %a{:href => "#"} My first Website
-          %li
-            %a{:href => "#"} FizzBuzz
       %li
-        %a{:href => "#"} About me
+        = link_to 'Home', 'index.html'
+      %li
+        = link_to 'Projects', 'projects.html'
+      %li
+        = link_to 'About me', 'aboutme.html'
       %li
         %a{:href => "#"} Blog
