--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -30,3 +30,40 @@ body {
   background-color: black;
   text-align: center;
 }
+
+.footer {
+
+  background-color: black;
+  font-size: 18px;
+  width: 500px;
+  border: 1px solid black;
+  text-align: left;
+  position: fixed;
+  bottom: 0;
+  width: 100px;
+  height: 50px; /* choose any height */
+  margin-left: 30px;
+
+}
+
+  .container {
+    width: 1780px;
+    border: 2px solid black;
+    overflow: hidden;
+}
+
+  .contactinfo {
+    width: 300px;
+    float:left;
+    border: 1px solid black;
+}
+  .socialmedia {
+    border: 1px solid black;
+    text-align: right;
+    overflow: hidden;
+    margin-left: 30px;
+    margin-bottom: 30px;
+}
+.size-36{
+  font-size: 36px;
+}
