linked the social media icons

--- a/source/partials/_footer.html.haml
+++ b/source/partials/_footer.html.haml
@@ -4,7 +4,13 @@
       Contact info: +46735904739
 
     .socialmedia
-      %i.step.fi-social-instagram.size-36
-      %i.step.fi-social-facebook.size-36
-      %i.step.fi-social-github.size-36
-      %i.step.fi-social-youtube.size-36
+      %a{:href => "https://www.instagram.com/blokkinen/"}
+        %i.step.fi-social-instagram.size-36
+      %a{:href => "https://www.facebook.com/viktoria.blok"}
+        %i.step.fi-social-facebook.size-36
+      %a{:href => "https://github.com/Blokkinen"}
+        %i.step.fi-social-github.size-36
+      %a{:href => "https://www.youtube.com/channel/UCmtnp22Ydoohlh8xWfuY0Dw"}
+        %i.step.fi-social-youtube.size-36
+      %a{:href => "https://se.pinterest.com/viktoriablok/"}
+        %i.step.fi-social-pinterest.size-36
