--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -47,9 +47,10 @@ body {
 }
 
   .container {
-    width: 1780px;
-    border: 2px solid black;
+    width: 1830px;
+    //border: 2px solid black;
     overflow: hidden;
+    border: 1px solid black;
 }
 
   .contactinfo {
@@ -58,11 +59,15 @@ body {
     border: 1px solid black;
 }
   .socialmedia {
+    opacity: 0.5;
     border: 1px solid black;
+    width: 300px;
     text-align: right;
     overflow: hidden;
-    margin-left: 30px;
+    float:right;
+    padding-bottom: 100px;
     margin-bottom: 30px;
+    margin-top: -13px;
 }
 .size-36{
   font-size: 36px;
