--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -29,6 +29,27 @@ $menu-background: black;
 body {
   background-color: black;
   text-align: center;
+
+}
+
+/* unvisited link */
+a:link {
+    color: white;
+}
+
+/* visited link */
+a:visited {
+    color: white;
+}
+
+/* mouse over link */
+a:hover {
+    color: #333333;
+}
+
+/* selected link */
+a:active {
+    color: black;
 }
 
 .footer {
