deleted the code I got from Suss and added another one

--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -5,14 +5,14 @@
   .top-bar-left
     %ul.dropdown.menu{"data-dropdown-menu" => ""}
       %li.menu-text
-        = link_to 'Viktoria Blok', 'index.html'
+        = link_to 'Viktoria Blok', '/index.html'
   .top-bar-right
     %ul.menu{"data-responsive-menu" => "drilldown medium-dropdown"}
       %li
-        = link_to 'Home', 'index.html'
+        = link_to 'Home', '/index.html'
       %li
-        = link_to 'Projects', 'projects.html'
+        = link_to 'Projects', '/projects.html'
       %li
-        = link_to 'About me', 'aboutme.html'
+        = link_to 'About me', '/aboutme.html'
       %li
         %a{:href => "#"} Blog
