--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -62,12 +62,13 @@ a:active {
   bottom: 0;
   width: 100px;
   height: 50px; /* choose any height */
-  margin-left: 30px;
+  padding: 20px;
+  //margin-left: 30px;
 
 }
 
   .container {
-    width: 1830px;
+    width: 1820px;
     overflow: hidden;
 }
 
