added google analytics

--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -13,6 +13,6 @@
       %li
         = link_to 'Projects', '/projects.html'
       %li
-        = link_to 'About me', '/aboutme.html'
+        = link_to 'About me', 'aboutme.html'
       %li
         %a{:href => "#"} Blog
