Forgot to switch branch

--- a/source/aboutme.html.haml
+++ b/source/aboutme.html.haml
@@ -1,11 +1,17 @@
 
 %h3 Hi there!
 
-%br dk.jbsödfkbsldifyawlyfglwdohlwiaufgliweyg
+%br My name is Viktoria.
 %br nwdfibwskefgwleuyflyusKDBCLFIEYGoidhwiouh
 %br jsbflisgdflugsflhsfhlöwDJOHÖOAUWEGHFIÖAUEGF
 %br khdfkhfälihjdädnöoiawhöeiouwgfpöiawugf
 %br sdlföfshööodihwöaouhaöoeughdföaeouw
 %br wjfaliwuehfgödbcföiqeuwhfdliuawegfliuwge
-.logo
+
+:javascript
+$( document ).ready(function() {
+('jag.jpg').fadeIn(1000);
+}
+
+.photo
   = image_tag 'jag.jpg'
