--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -15,4 +15,4 @@
       %li
         = link_to 'About me', 'aboutme.html'
       %li
-        %a{:href => "#"} Blog
+        = link_to 'Blog', 'blog.html'
